# yt-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/brand/: yt-agent-hero.prompt.md
config/: config.sample.toml  yt-agent.sample.toml
docs/: agent-workflows.md  architecture.md  command-reference.md  concepts.md  faq.md  getting-started.md  recipes.md  release-checklist.md  roadmap.md  shell-completion.md  support-matrix.md  troubleshooting.md  workflow.md
examples/agents/: antigraviti.md  approval-safe-download.md  claude-code.md  clip-hunter.md  codex.md  gemini-cli.md  library-curator.md  opencode.md  playlist-curator.md
examples/scripts/: batch-clip-extract.sh  batch-download-from-file.sh  catalog-backup.sh  daily-channel-check.sh  library-cleanup-preview.sh  library-report.sh  playlist-curation-preview.sh  remote-index-and-clip.sh
scripts/: gen_screenshots.py
skills/yt-agent/: SKILL.md
src/youtube_cli/: __init__.py  __main__.py  archive.py  cli.py  config.py  errors.py  library.py  manifest.py  models.py  selector.py  yt_dlp.py
src/yt_agent/: __init__.py  __main__.py  archive.py  catalog.py  chapters.py  cli.py  cli_download.py  cli_output.py  clips.py  config.py  errors.py  indexer.py  library.py  manifest.py  models.py  security.py  selector.py  transcripts.py  tui.py  yt_dlp.py
tests/: conftest.py  test_catalog.py  test_catalog_bench.py  test_catalog_prop.py  test_cli.py  test_clips.py  test_config.py  test_indexer.py  test_library.py  test_manifest.py  test_models_prop.py  test_security.py  test_selector.py  test_smoke.py  test_transcripts.py  test_transcripts_prop.py  test_tui.py  test_workflows.py  test_yt_dlp.py
