[project]
name = "yt-agent"
version = "0.2.0"
description = "Terminal-first YouTube search, download, catalog, and clip tooling built on yt-dlp."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["youtube", "cli", "yt-dlp", "clips", "transcripts", "textual"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Video",
  "Topic :: Utilities",
]
dependencies = [
  "rich>=14.0.0",
  "textual>=2.1.2",
  "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/jvogan/yt-agent"
Repository = "https://github.com/jvogan/yt-agent"
Issues = "https://github.com/jvogan/yt-agent/issues"
Documentation = "https://github.com/jvogan/yt-agent/tree/main/docs"
Changelog = "https://github.com/jvogan/yt-agent/blob/main/CHANGELOG.md"

[project.scripts]
yt-agent = "yt_agent.cli:main"
youtube-cli = "yt_agent.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_agent", "src/youtube_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src/yt_agent"]

[[tool.mypy.overrides]]
module = ["textual.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["yt_agent"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__",
  "if TYPE_CHECKING",
]

[tool.ruff]
line-length = 100
target-version = "py311"
